# ms-rs

./: README.md
catalog-diesel/: .env  Cargo.toml
catalog-diesel/migrations/2023-02-28-210443_create_catalog/: down.sql  up.sql
catalog-diesel/src/: main.rs  models.rs  schema.rs
catalog/migration/src/: m20220101_000001_create_table.rs
